style.css
html {
    font-size: 14px;
    font-family: 'Nunito';
    position: relative;
    color: #182325;
}

body {
    background-color: #FFFFFA;
    display: flex;
    flex-direction: column !important;
    height: 100%;
}

.body * {
    width: 100%;
}

main {
    position: relative;
}

.main-container {
    width: 90% !important;
    margin: auto;
}

h1,
h2,
h3,
h4 {
    font-family: 'Poppins';
}

h2 {
    margin-bottom: 15px !important;
    font-size: 24px;
}

h3 {
    font-size: 20px !important;
}

h4 {
    font-size: 16px !important;
}

.btn {
    border-radius: 50px !important;
}

section {
    padding-bottom: 15px;
    ;
    margin-top: 30px;
}

.section-title {
    text-align: center;
    margin: 30px;
}

.bi-arrow-up-circle-fill {
    position: fixed;
    bottom: 10px;
    right: 10px;
    margin: 20px;
    z-index: 999;
    transition: opacity 0.3s ease-in-out;
    opacity: 0;
}

.hide-up-button {
    opacity: 0.9;
}

/* NAVBAR */

.navbar {
    background-color: #93C8BA;
}

header {
    transition: opacity 0.3s ease-in-out;
}

.header-opacity {
    opacity: 0.8;
}

.navbar-nav {
    align-items: center;
    width: 100%;
    justify-content: space-evenly;
    align-items: center;
}

.nav-item {
    text-align: center;
    margin-bottom: 0;
}

.navbar h3,
.navbar h2 {
    margin-bottom: 0px;
}

.nav-link {
    color: #182325 !important;
    cursor: pointer;
}

.navbar-expand-sm {
    height: 80px;
}

.navbar-toggler {
    border-color: #182325 !important;
    position: absolute;
    top: 15px;
    right: 20px;
}

/* ABOUT SECTION */

.about-me {
    text-align: center;
    margin-bottom: 40px !important;
}

.about-image-container {
    grid-area: image;
    max-height: 400px;
}

.about-container {
    display: grid;
    grid-template-columns: 2fr 3fr;
    grid-template-areas:
        "image text";
    gap: 4rem;
}

@media (max-width: 575px) {
    .about-container {
        display: flex;
        flex-direction: column;
        gap: 1rem;
    }

    .about-image-container {
        height: 300px;
        width: 100%;
    }

    .about-image {
        height: auto;
        object-fit: contain !important;
    }
}

.about-text {
    align-items: center;
    position: relative;
    grid-area: text;
}

.about-text p {
    text-align: justify;
}

.about-image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.about-text h3 {
    text-align: center;
}

.about-buttons {
    padding-top: 15px;
    display: flex;
    justify-content: space-around;
}

.about-button {
    background-color: #93C8BA !important;
    text-decoration: unset;
}

.about-button a {
    text-decoration: none;
}

.about-button:hover {
    background-color: #FFFFFA !important;
    transition: background-color 0.3s ease-in-out !important;
    border: solid 1px #93C8BA;
}

.modal-body,
.modal-footer {
    background-color: #182325;
    opacity: 0.85;
}

/* SECTION TECH */

.tech {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 4rem;
    align-items: center
}

@media (max-width: 992px) {
    .tech {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 4rem;
        grid-template-areas:
            "front back"
            "transverses transverses";
    }

    .transverses {
        grid-area: transverses;
    }
}

@media (max-width: 767px) {
    .tech {
        display: block;
    }

    .icons {
        margin-bottom: 20px;
    }
}


.quote {
    text-align: center;
    display: flex;
    flex-direction: column;
    padding-bottom: 15px;
}

.quote p {
    margin: unset;
}

.quote:after,
.quote:before {
    content: '';
    display: block;
    border: 0.2px solid #93C8BA;
    width: 50%;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: auto;
    margin-left: auto;
}

.tech h3 {
    text-align: center;
    margin-bottom: 30px;
}

.icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.icon-group {
    width: 80px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
}

.icon-group p {
    text-align: center;
}

.icon {
    height: 40px;
    text-align: center;
}


/* Work Section */
@media (max-width: 575px) {
    #portfolio-section {
        margin-top: unset !important;
    }
}


.section-text {
    text-align: center;
    padding-bottom: 15px;
}

.cards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 50px;
    margin-bottom: 30px;
    grid-auto-rows: 1fr !important;
}

@media (max-width: 767px) {
    .card>a {
        height: 200px !important;
    }

    .cards {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 575px) {
    .card>a {
        height: 200px !important;
    }

    .cards {
        display: grid;
        grid-template-columns: 1fr;
    }
}

.card {
    border: unset;
    height: 100%;
}

.card img {
    border-top: solid 1px #93C8BA;
    border-right: solid 1px #93C8BA;
    border-left: solid 1px #93C8BA;
    height: 100%;
    width: 100%
}

.card>a {
    height: 200px;
}

@media (max-width: 992px) {
    .card>a {
        height: 120px;
    }
}

.card-text {
    text-align: center;
}

.card-body {
    border: solid 1px #93C8BA;
}

.tech-used {
    display: flex;
    justify-content: space-around;
    margin-top: 10px;
}

.item button {
    cursor: auto;
}

a {
    color: #182325;
}

.tech-button {
    background-color: #FFFFFA !important;
    border: solid 1px #93C8BA;
}


/* Footer style CSS */

footer .container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    text-align: center;
    align-items: center;
    gap: 15px;
}

.footer-text-right svg {
    margin-right: 5px;
}

footer {
    background-color: #93C8BA;
    margin-bottom: unset;
    padding: 10px;
}

.scroll-top-footer {
    fill: #FFFFFA !important;
    transition: fill 0.3s ease-in-out;
}

#scroll-top-button:focus {
    box-shadow: none !important;
}

.footer {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    text-align: center;
}

.footer-text-middle h4:after {
    content: '';
    display: block;
    border: 0.1px solid #182325;
    width: 50%;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: auto;
    margin-left: auto;
}

.footer a {
    text-decoration: none !important;
}

